* 하단 부터 [홈 / 서비스이용약관 ] 마우스 오버시 텍스트 푸른색이던데 언더라인으로만 부탁드립니다.

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,6 +10,12 @@
       align-items: center;
       max-width: rem(1260px);
       padding: 1rem 0;
+      .footer__link {
+        &:hover {
+          color: #ffffff;
+          text-decoration: underline;
+        }
+      }
     }
   }
   &__container {
