--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -37,7 +37,7 @@
     width: rem(460px);
     height: rem(600px);
     // margin-top: rem(64px);
-    margin-bottom: 6%;
+    // margin-bottom: 6%;
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -59,14 +59,14 @@
   .cont-box {
     display: flex;
     flex-wrap: nowrap;
-    align-items: flex-end;
+    align-items: center;
     max-width: rem(1398px);
     height: 100%;
     margin-right: rem(32px);
     margin-left: rem(314px);
   }
   .caption {
-    margin-bottom: 18%;
+    // margin-bottom: 18%;
     margin-left: rem(64px);
     color: #242424;
     .logo {
@@ -1141,6 +1141,7 @@
     }
     .cont-box {
       flex-direction: column-reverse;
+      align-items: flex-end;
       justify-content: flex-end;
       position: relative;
       width: 100%;
